--- a/Martify/LoginWindow.xaml
+++ b/Martify/LoginWindow.xaml
@@ -35,7 +35,7 @@
             <Border CornerRadius="20">
                 <Border.Background>
                     <ImageBrush ImageSource="{StaticResource LoginBackground}"
-                                Stretch="UniformToFill" Opacity="0.1"/>
+                                Stretch="UniformToFill"/>
                 </Border.Background>
             </Border>
         </Border>
